--- a/ACL/ACL.cbp
+++ b/ACL/ACL.cbp
@@ -6,29 +6,53 @@
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
-			<Target title="Build">
-				<Option output="build/lib/ACL" prefix_auto="1" extension_auto="1" />
+			<Target title="x64">
+				<Option output="build/lib64/ACL" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
-				<Option object_output="build/obj/" />
+				<Option object_output="build/obj64/" />
 				<Option type="2" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
-					<Add directory="include" />
+					<Add option="-m64" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add option="-m64" />
+				</Linker>
+			</Target>
+			<Target title="x32">
+				<Option output="build/lib32/ACL" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="" />
+				<Option object_output="build/obj32/" />
+				<Option type="2" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-O2" />
+					<Add option="-m32" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+					<Add option="-m32" />
 				</Linker>
 			</Target>
 		</Build>
+		<VirtualTargets>
+			<Add alias="All" targets="x64;x32;" />
+		</VirtualTargets>
 		<Compiler>
 			<Add option="-Wall" />
 			<Add directory="include" />
 		</Compiler>
-		<Unit filename="include/ACL/error.h" />
 		<Unit filename="include/ACL/general.h" />
+		<Unit filename="include/ACL/gui/color.h" />
+		<Unit filename="include/ACL/math/binpow.h" />
+		<Unit filename="include/ACL/math/cmath.h" />
+		<Unit filename="include/ACL/math/getneutral.h" />
+		<Unit filename="include/ACL/math/matrix.h" />
 		<Unit filename="include/ACL/math/vector.h" />
 		<Unit filename="include/ACL/math/vector.tpl.h" />
+		<Unit filename="include/ACL/vector.h" />
 		<Unit filename="src/general.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
