--- a/ACL/ACL.cbp
+++ b/ACL/ACL.cbp
@@ -46,12 +46,14 @@
 		</Compiler>
 		<Unit filename="include/ACL/general.h" />
 		<Unit filename="include/ACL/gui/color.h" />
+		<Unit filename="include/ACL/gui/rect.h" />
 		<Unit filename="include/ACL/math/binpow.h" />
 		<Unit filename="include/ACL/math/cmath.h" />
 		<Unit filename="include/ACL/math/getneutral.h" />
 		<Unit filename="include/ACL/math/matrix.h" />
 		<Unit filename="include/ACL/math/vector.h" />
 		<Unit filename="include/ACL/math/vector.tpl.h" />
+		<Unit filename="include/ACL/type_traits.h" />
 		<Unit filename="include/ACL/vector.h" />
 		<Unit filename="src/general.cpp" />
 		<Extensions>
