ACL improve callback-events

--- a/ACL/ACL.cbp
+++ b/ACL/ACL.cbp
@@ -45,6 +45,7 @@
 			<Add directory="include" />
 		</Compiler>
 		<Unit filename="include/ACL/event.h" />
+		<Unit filename="include/ACL/event.tpl.h" />
 		<Unit filename="include/ACL/general.h" />
 		<Unit filename="include/ACL/gui/color.h" />
 		<Unit filename="include/ACL/gui/coords.h" />
