--- a/ACL/ACL.cbp
+++ b/ACL/ACL.cbp
@@ -13,7 +13,6 @@
 				<Option type="2" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-O2" />
 					<Add option="-m64" />
 				</Compiler>
 				<Linker>
@@ -28,11 +27,9 @@
 				<Option type="2" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-O2" />
 					<Add option="-m32" />
 				</Compiler>
 				<Linker>
-					<Add option="-s" />
 					<Add option="-m32" />
 				</Linker>
 			</Target>
@@ -41,9 +38,13 @@
 			<Add alias="All" targets="x64;x32;" />
 		</VirtualTargets>
 		<Compiler>
+			<Add option="-O2" />
 			<Add option="-Wall" />
 			<Add directory="include" />
 		</Compiler>
+		<Linker>
+			<Add option="-s" />
+		</Linker>
 		<Unit filename="include/ACL/event.h" />
 		<Unit filename="include/ACL/event.tpl.h" />
 		<Unit filename="include/ACL/general.h" />
