--- a/AGF/AGF.cbp
+++ b/AGF/AGF.cbp
@@ -13,11 +13,9 @@
 				<Option type="2" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-O2" />
 					<Add option="-m64" />
 				</Compiler>
 				<Linker>
-					<Add option="-s" />
 					<Add option="-m64" />
 					<Add directory="../ACL/build/lib64" />
 				</Linker>
@@ -29,11 +27,9 @@
 				<Option type="2" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-O2" />
 					<Add option="-m32" />
 				</Compiler>
 				<Linker>
-					<Add option="-s" />
 					<Add option="-m32" />
 					<Add directory="../ACL/build/lib32" />
 				</Linker>
@@ -43,12 +39,16 @@
 			<Add alias="All" targets="x64;x32;" />
 		</VirtualTargets>
 		<Compiler>
+			<Add option="-O2" />
 			<Add option="-Wall" />
 			<Add directory="include" />
 			<Add directory="../ACL/include" />
 		</Compiler>
+		<Linker>
+			<Add option="-s" />
+		</Linker>
 		<Unit filename="include/AGF/application.h" />
-		<Unit filename="include/AGF/common_events.h" />
+		<Unit filename="include/AGF/events.h" />
 		<Unit filename="include/AGF/impl/llgui_txlib.h" />
 		<Unit filename="include/AGF/llgui.h" />
 		<Unit filename="include/AGF/widget.h" />
