--- a/ACL/ACL.cbp
+++ b/ACL/ACL.cbp
@@ -46,12 +46,11 @@
 			<Add option="-s" />
 		</Linker>
 		<Unit filename="include/ACL/debug.h" />
-		<Unit filename="include/ACL/event.h" />
-		<Unit filename="include/ACL/event.tpl.h" />
 		<Unit filename="include/ACL/general.h" />
 		<Unit filename="include/ACL/gui/color.h" />
 		<Unit filename="include/ACL/gui/coords.h" />
 		<Unit filename="include/ACL/gui/rect.h" />
+		<Unit filename="include/ACL/list.h" />
 		<Unit filename="include/ACL/log.h" />
 		<Unit filename="include/ACL/math/binpow.h" />
 		<Unit filename="include/ACL/math/cmath.h" />
@@ -59,7 +58,10 @@
 		<Unit filename="include/ACL/math/matrix.h" />
 		<Unit filename="include/ACL/math/vector.h" />
 		<Unit filename="include/ACL/math/vector.tpl.h" />
+		<Unit filename="include/ACL/signal.h" />
+		<Unit filename="include/ACL/signal.tpl.h" />
 		<Unit filename="include/ACL/type_traits.h" />
+		<Unit filename="include/ACL/unique_ptr.h" />
 		<Unit filename="include/ACL/vector.h" />
 		<Unit filename="src/general.cpp" />
 		<Unit filename="src/log.cpp" />
