--- a/AGF/AGF.cbp
+++ b/AGF/AGF.cbp
@@ -57,6 +57,7 @@
 		<Unit filename="include/AGF/widget_event.h" />
 		<Unit filename="src/application.cpp" />
 		<Unit filename="src/llgui_txlib.cpp" />
+		<Unit filename="src/widget.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
