--- a/Photoshoop/Photoshoop.cbp
+++ b/Photoshoop/Photoshoop.cbp
@@ -4,6 +4,7 @@
 	<Project>
 		<Option title="Photoshoop" />
 		<Option pch_mode="2" />
+		<Option default_target="Debug" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
@@ -28,6 +29,9 @@
 				</Linker>
 			</Target>
 		</Build>
+		<VirtualTargets>
+			<Add alias="All" targets="Debug;Release;" />
+		</VirtualTargets>
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-m64" />
