--- a/AGF/AGF.cbp
+++ b/AGF/AGF.cbp
@@ -32,6 +32,25 @@
 					<Add option="-m32" />
 				</Linker>
 			</Target>
+			<Target title="Profile">
+				<Option output="build/lib64/profile/AGF" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="" />
+				<Option object_output="build/obj64/profile/" />
+				<Option type="2" />
+				<Option compiler="gcc" />
+				<Option projectCompilerOptionsRelation="1" />
+				<Compiler>
+					<Add option="-O2" />
+					<Add option="-Wall" />
+					<Add option="-pg" />
+					<Add option="-m64" />
+					<Add option="-g" />
+				</Compiler>
+				<Linker>
+					<Add option="-pg -lgmon" />
+					<Add option="-m64" />
+				</Linker>
+			</Target>
 		</Build>
 		<VirtualTargets>
 			<Add alias="All" targets="x64;x32;" />
@@ -42,6 +61,9 @@
 			<Add directory="include" />
 			<Add directory="../ACL/include" />
 		</Compiler>
+		<Linker>
+			<Add option="-s" />
+		</Linker>
 		<Unit filename="include/AGF/application.h" />
 		<Unit filename="include/AGF/events.dsl.h" />
 		<Unit filename="include/AGF/events.h" />
