--- a/VS/AGF/AGF.vcxproj
+++ b/VS/AGF/AGF.vcxproj
@@ -31,6 +31,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\AGF\application.h" />
+    <ClInclude Include="include\AGF\events.dsl.h" />
     <ClInclude Include="include\AGF\events.h" />
     <ClInclude Include="include\AGF\impl\llgui_txlib.h" />
     <ClInclude Include="include\AGF\llgui.h" />
@@ -130,7 +131,7 @@
       <LanguageStandard>stdcpp17</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
       <AdditionalIncludeDirectories>include;$(SolutionDir)\ACL\include;$(SolutionDir)\..\..\TXLib\TX</AdditionalIncludeDirectories>
-      <DisableSpecificWarnings>4201;4146;4100;4189</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4201;4146;4100;4189;26812</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>
@@ -155,7 +156,7 @@
       <LanguageStandard>stdcpp17</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
       <AdditionalIncludeDirectories>include;$(SolutionDir)\ACL\include;$(SolutionDir)\..\..\TXLib\TX</AdditionalIncludeDirectories>
-      <DisableSpecificWarnings>4201;4146;4100;4189</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4201;4146;4100;4189;26812</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>
@@ -180,7 +181,7 @@
       <LanguageStandard>stdcpp17</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
       <AdditionalIncludeDirectories>include;$(SolutionDir)\ACL\include;$(SolutionDir)\..\..\TXLib\TX</AdditionalIncludeDirectories>
-      <DisableSpecificWarnings>4201;4146;4100;4189</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4201;4146;4100;4189;26812</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>
@@ -205,7 +206,7 @@
       <LanguageStandard>stdcpp17</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
       <AdditionalIncludeDirectories>include;$(SolutionDir)\ACL\include;$(SolutionDir)\..\..\TXLib\TX</AdditionalIncludeDirectories>
-      <DisableSpecificWarnings>4201;4146;4100;4189</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4201;4146;4100;4189;26812</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>
