--- a/VS/Photoshoop/Photoshoop.vcxproj
+++ b/VS/Photoshoop/Photoshoop.vcxproj
@@ -98,7 +98,7 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
-      <DisableSpecificWarnings>4201;4146;4100;4189</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4201;4146;4100;4189;26812</DisableSpecificWarnings>
       <AdditionalIncludeDirectories>$(SolutionDir)\ACL\include;$(SolutionDir)\AGF\include;$(SolutionDir)\..\..\TXLib\TX</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
@@ -118,7 +118,7 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
-      <DisableSpecificWarnings>4201;4146;4100;4189</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4201;4146;4100;4189;26812</DisableSpecificWarnings>
       <AdditionalIncludeDirectories>$(SolutionDir)\ACL\include;$(SolutionDir)\AGF\include;$(SolutionDir)\..\..\TXLib\TX</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
@@ -138,7 +138,7 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
-      <DisableSpecificWarnings>4201;4146;4100;4189</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4201;4146;4100;4189;26812</DisableSpecificWarnings>
       <AdditionalIncludeDirectories>$(SolutionDir)\ACL\include;$(SolutionDir)\AGF\include;$(SolutionDir)\..\..\TXLib\TX</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
@@ -158,7 +158,7 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
-      <DisableSpecificWarnings>4201;4146;4100;4189</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4201;4146;4100;4189;26812</DisableSpecificWarnings>
       <AdditionalIncludeDirectories>$(SolutionDir)\ACL\include;$(SolutionDir)\AGF\include;$(SolutionDir)\..\..\TXLib\TX</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
