--- a/VS/AGF/AGF.vcxproj.filters
+++ b/VS/AGF/AGF.vcxproj.filters
@@ -95,5 +95,8 @@
     <ClInclude Include="include\AGF\events.dsl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\AGF\impl\llgui_wintheme.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
