AGF minor events code changes

--- a/VS/AGF/AGF.vcxproj
+++ b/VS/AGF/AGF.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\application.cpp" />
+    <ClCompile Include="src\events.cpp" />
     <ClCompile Include="src\llgui_txlib.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\widget.cpp" />
@@ -34,6 +35,7 @@
     <ClInclude Include="include\AGF\events.dsl.h" />
     <ClInclude Include="include\AGF\events.h" />
     <ClInclude Include="include\AGF\impl\llgui_txlib.h" />
+    <ClInclude Include="include\AGF\impl\llgui_wintheme.h" />
     <ClInclude Include="include\AGF\llgui.h" />
     <ClInclude Include="include\AGF\llgui_pre.h" />
     <ClInclude Include="include\AGF\mouse.h" />
