VS ACL implement cmp.h
This is (or at least seems) huge. Both in terms of significance and compilation time impact)

Also includes is_valid_tpl and delay_tpl template trinkets

--- a/VS/ACL/ACL.vcxproj
+++ b/VS/ACL/ACL.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="src\log.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\ACL\cmp.h" />
     <ClInclude Include="include\ACL\debug.h" />
     <ClInclude Include="include\ACL\general.h" />
     <ClInclude Include="include\ACL\gui\color.h" />
