--- a/VS/AGF/AGF.vcxproj
+++ b/VS/AGF/AGF.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="src\application.cpp" />
     <ClCompile Include="src\events.cpp" />
+    <ClCompile Include="src\llgui_gdiplus_txlib.cpp" />
     <ClCompile Include="src\llgui_txlib.cpp" />
     <ClCompile Include="src\llgui_wintheme.cpp" />
     <ClCompile Include="src\main.cpp" />
@@ -36,6 +37,7 @@
     <ClInclude Include="include\AGF\application.h" />
     <ClInclude Include="include\AGF\events.dsl.h" />
     <ClInclude Include="include\AGF\events.h" />
+    <ClInclude Include="include\AGF\impl\llgui_gdiplus_txlib.h" />
     <ClInclude Include="include\AGF\impl\llgui_txlib.h" />
     <ClInclude Include="include\AGF\impl\llgui_wintheme.h" />
     <ClInclude Include="include\AGF\llgui.h" />
