--- a/VS/AGF/AGF.vcxproj.filters
+++ b/VS/AGF/AGF.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="src\events.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\llgui_gdiplus_txlib.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="src\llgui_wintheme.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -111,6 +114,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\AGF\style.dsl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\AGF\impl\llgui_gdiplus_txlib.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
